Ryuutama/Ryuutama.css
/* ... */
td, th {
    text-align: left;
    padding: 3px;
    width: 150px;
}

button[type=roll] {
    height: 23px;
    border-radius: 4px;
}

hr {
    margin: 12px;
}

.sheet-flex {
    display: flex;
    justify-content: space-around;
}

.sheet-flex-column {
    display: flex;
    flex-direction: column;
}

.sheet-logo {
    width: auto;
    height: 120px;
    margin-top: 10px;
}

.sheet-partyOptions {
    display: flex;
    justify-content: flex-start;
    margin: 9px;
}

.sheet-personalItems {
    justify-content: flex-start;
}

.sheet-round-box {
    border: 2px solid gray;
    border-radius: 9px;
    padding: 9px;
}

/* Grid for the HP, MP, and Condition
 ============================= */

.sheet-hpmpgrid {
    display: grid;
    grid-template-columns: repeat(2, .5fr) 1fr;
    grid-template-rows: .25fr 1fr;
    grid-column-gap: 2px;
    grid-row-gap: 0px;
}

.sheet-hpInfo { grid-area: 1 / 1 / 2 / 2; }
.sheet-mpInfo { grid-area: 1 / 2 / 2 / 3; }
.sheet-hp { grid-area: 2 / 1 / 3 / 2; }
.sheet-mp { grid-area: 2 / 2 / 3 / 3; }
.sheet-condInfo { grid-area: 1 / 3 / 2 / 4; }
.sheet-condition { grid-area: 2 / 3 / 3 / 4; }


.sheet-hpmpHeader {
    color: black;
    /* background: #45619e; */
    background: #aaeeaa;
    padding: auto;
    justify-content: flex-start;
    font-size: 1.05em;
    font-weight: bold;
    border-radius: 4px;
    padding: 0 5px;
}

.sheet-icon {
    width: 50px;
    height: auto;
    background: #88394d;
    border-radius: 6px;
    margin: 3px;
}

.sheet-condionBar {
    align-items: center;
    padding: 6px 0 0 0;
    margin: 0px;
    font-size: 1em;
}

.sheet-condionBar label {
    padding: 0px;
}

.sheet-condAttribute {
    height: 20px;
    width: 50px;
    line-height: 20px;
    padding: 0;
    margin: 0 5px;
    text-align: center;
}

/* Grid for the main stat boxes STR, DEX, INT, SPI
 ============================= */
 .sheet-coreStatGrid {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.sheet-coreStatGrid select {
    width: 50px;
    text-align: center;
}

.sheet-coreStatText         { grid-area: 1 / 1 / 2 / 2; font-size: 1.25em; text-align: center; font-weight: bold;}
.sheet-coreStatBaseDie      { grid-area: 2 / 1 / 3 / 2; text-align: center; align-items: center;}
.sheet-coreStatCurrentDie   { grid-area: 1 / 2 / 3 / 3; align-items: center; justify-content: end}

.sheet-coreStatCurrentDie input[type='number'] {
    text-align: center;
    width: 60px;
    height: 50px;
    font-size: 2em;
    margin: 6px 0 0 0;
}

/*============================= */

.sheet-charoptions {
    width: 100px;
    position: relative;
    top: 5px;
}

.sheet-attributeType {
    width: 65px;
    position: relative;
    top: 5px;
}

.sheet-classSkillRoll {
    margin-left: 10px;
}

.sheet-spellRow {
    margin-right: 2px;
    margin-top: 2px;
}

.sheet-spellDetails {
    margin-top: 5px;
    margin-left: 5px;
    vertical-align: top;
    display: inline-block;
}

.sheet-spellEffect {
    margin: 0 5px;
    height: 75px;
}

.sheet-spellEffectDisplay {
    padding-left: 10px;
    padding-bottom: 10px;
    margin: 0 5px;
    font-family: 'Roboto';
}

.sheet-spellTypes {
    width: 130px;
    position: relative;
}

.sheet-spellDuration {
    width: 130px;
}

.sheet-spellTarget {
    width: 130px;
}

.sheet-spellRange {
    width: 130px;
}

.sheet-dtype {
    width: 60px;
    position: relative;
    top: 5px;
}

.sheet-skillCheck {
    position: relative;
    bottom: 5px;
    top: 1px;
}

.sheet-conditionCheck {
    position: relative;
    bottom: 5px;
}

.sheet-coreAttributes {
    display: flex;
    flex-flow: row;
    justify-content: space-around;
}

.sheet-attrLabel {
    background: #aaeeaa;
    color: black;
    font-size: 1.05em;
    margin: 6px 0 3px 0;
    width: 98%;
    padding: 2px 5px;
    border-radius: 3px;
}

.sheet-healthLabel, .sheet-infoLabel {
    position: relative;
    top: 5px;
}

.sheet-journeyLabel {
    font-size: 13px;
    display: block;
    position: relative;
    top: 2px;
    left: 3px;
    padding-bottom: 2px;
}

.sheet-journeyMod {
    float: right;
    margin-bottom: 2px;
}

.sheet-itemLabel {
    position: relative;
    top: 5px;
}

.sheet-terrain {
    width: 120px;
    position: relative;
    top: 3px;
}

.sheet-applyModifier {
    position: relative;
    top: 5px;
}

.sheet-hidden {
    display: none;
}

.sheet-itemCount {
    position: relative;
    left: 38px;
}

.sheet-animalCapacity {
    position: relative;
    left: 80px;
}

.sheet-showDiv {
    display: none;
}

.sheet-showDiv:not(:checked) ~ div, fieldset {
    display: none !important;
}

.sheet-showDiv:checked ~ div, fieldset {
    display: inline;
}

.sheet-showFumble {
    display: none;
}

.sheet-showFumble:not(:checked) ~ label {
    display: none !important;
}

.sheet-showFumble:checked ~ label {
    display: inline;
}

span.sheet-overburdenPenalty {
    position: relative;
    top: 3px;
}

input.sheet-overburdenPenalty {
    position: relative;
    top: 1px
}

.sheet-bonusPenaltyPreferences {
    position: relative;
    bottom: 8px;
}

.sheet-checkLabel {
    position: relative;
    top: 10px;
}

.sheet-spellsLabel {
    margin-bottom: 10px;
}

.sheet-sideJobPenalty {
    position: relative;
    top: 2px;
}

.sheet-penaltyCondition {
    display: none;
}

.sheet-penaltyCondition:checked ~ input {
    border-color: #ff8888;
}

.sheet-deathCondition {
    display: none;
}

.sheet-deathCondition:checked ~ input {
    border-color: red;
}

.sheet-bonusCondition {
    display: none;
}

.sheet-bonusCondition:checked ~ input {
    border-color: green;
}

.sheet-inlineCheckbox {
    display: inline;
}

.sheet-headerLabel {
    background: #aaeeaa;
    color: black;
    border-radius: 4px;
    padding: 2px 5px;
    width: 240px;
    font-size: 1.05em;
    height: 20px;
}

.sheet-headerLabel-eq {
    font-size: 13px;
    width: max-content;
    min-width: 240px;
}

.sheet-loweredHeaderLabel {
    margin-top: 5px;
}

.sheet-checkboxLabel {
    font-weight: bold;
    font-size: 12px;
}
/* ... */

