[Ryuutama]: fixing overflow issues

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -200,6 +200,8 @@ hr {
     padding-bottom: 10px;
     margin: 0 5px;
     font-family: 'Roboto';
+    white-space: pre-wrap;
+    word-break: break-word;
 }
 
 .sheet-spellTypes {
@@ -694,10 +696,8 @@ div.sheet-settings {
 
 .sheet-spell-details {
     display: grid;
-    grid-template-columns: 200px 50px repeat(4, 135px);
+    grid-template-columns: 200px 50px 120px 200px 120px 100px;
     grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
     text-align: left;
 }
 
@@ -708,6 +708,12 @@ div.sheet-settings {
 .sheet-spellRange    { grid-area: 1 / 5 / 2 / 6; }
 .sheet-spellTypes    { grid-area: 1 / 6 / 2 / 7; }
 
+.sheet-ellipsis {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 100%;
+}
 
 .repcontainer[data-groupname='repeating_spells'] {
     padding-bottom: 20px;
